Enable session values with boost any

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,9 @@ option (ENABLE_STATS
 
 option (ENABLE_REGEX_URL
     "Enable url regex matching dispatcher" OFF)
+	
+option (ENABLE_SESSION_BOOST_ANY
+    "Enable session values with boost any" OFF)
 
 set (JSONCPP_DIR "${PROJECT_SOURCE_DIR}/../jsoncpp"
     CACHE STRING "Json C++ directory")
@@ -42,6 +45,13 @@ if (ENABLE_REGEX_URL)
     add_definitions("-DENABLE_REGEX_URL")
     SET (CMAKE_CXX_FLAGS "-std=c++11")
 endif (ENABLE_REGEX_URL)
+
+if (ENABLE_SESSION_BOOST_ANY)
+	find_package(Boost REQUIRED COMPONENTS program_options system)
+	include_directories(${Boost_INCLUDE_DIRS})
+	set (EXTRA_LIBS ${EXTRA_LIBS} ${Boost_LIBRARIES}) 
+    add_definitions("-DENABLE_SESSION_BOOST_ANY")
+endif (ENABLE_SESSION_BOOST_ANY)
 
 SET (CMAKE_CXX_FLAGS "-g")
 
