--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,7 @@ endif (ENABLE_STATS)
 
 if (ENABLE_REGEX_URL)
     add_definitions("-DENABLE_REGEX_URL")
-    SET (CMAKE_CXX_FLAGS "-std=c++11")
+    SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 endif (ENABLE_REGEX_URL)
 
 if (ENABLE_SESSION_BOOST_ANY)
@@ -52,8 +52,6 @@ if (ENABLE_SESSION_BOOST_ANY)
 	set (EXTRA_LIBS ${EXTRA_LIBS} ${Boost_LIBRARIES}) 
     add_definitions("-DENABLE_SESSION_BOOST_ANY")
 endif (ENABLE_SESSION_BOOST_ANY)
-
-SET (CMAKE_CXX_FLAGS "-g")
 
 if (CPP_BINDING)
     set (SOURCES
